Fix .md-err being covered

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -205,7 +205,7 @@ code.blk {
 }
 .md-err {
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	display: inline-block;
 	margin-top: -1.3em;
 	background: #f00;
